--- a/hardskills/programacao/lojacrediario/style.css
+++ b/hardskills/programacao/lojacrediario/style.css
@@ -6,8 +6,14 @@
 
 body {
     display: flex;
-    /*width: 100vw;*/
-    height: 100vh;
+    /*width: 100vw;
+    height: 100vh;*/
+}
+
+h1 {
+    background-color: #494949;
+    color: whitesmoke;
+    text-align: center;
 }
 
 main {
@@ -139,6 +145,37 @@ main {
     margin: 5px;
     color: whitesmoke;
     background-color: #494949;
+}
+
+#main > span{
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
+}
+
+#filtro > span {
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
+}
+
+#filtro > span > span {
+    display: flex;
+    flex-grow: 1;
+}
+
+#filtro > span > span > * {
+    display: flex;
+    flex-grow: 1;
+    padding: 10px;
+}
+
+#compras li {
+    flex-direction: row;
+}
+
+#compras li {
+    flex-direction: row;
 }
 
 /*
